# comp3431-team-neo

./: .gitignore  README.md  frames.gv  map_1636001437.pgm  map_1636001437.yaml  map_1636327630.pgm  map_1636327630.yaml  map_house1.pgm  map_house1.yaml  map_house_monday.pgm  map_house_monday.yaml  marker_coords.txt  problem-init.pddl  problem.pddl  rvis_loadmap.sh  rvis_makemap.sh  save_map.sh  solution.txt  starter_code.sh  tb3_cartographer.rviz  turtlebot3_startup.sh
FF-X/: domain.pddl  ff  test.sh  tyreworld_domain.pddl
backup/: problem.pddl
helper_scripts/: save_map.sh
image_pipeline/image_publisher/install/: local_setup.sh  setup.sh
image_pipeline/image_publisher/log/: latest_build
image_pipeline/image_publisher/src/: image_publisher.cpp
install/: local_setup.sh  setup.sh
install/camera_calibration/share/camera_calibration/: package.sh
install/comp3431_ass3_worlds/share/comp3431_ass3_worlds/: package.sh
install/comp3431_starter/lib/comp3431_starter/: wallFollower
install/comp3431_starter/share/comp3431_starter/: package.sh
install/depth_image_proc/share/depth_image_proc/: package.sh
install/image_pipeline/share/image_pipeline/: local_setup.sh  package.sh
install/image_proc/share/image_proc/: package.sh
log/: latest_build
starter_code/: frames.gv  map_house1.pgm  map_house1.yaml
starter_code/install/: local_setup.sh  setup.sh
starter_code/log/: latest_build
starter_code/src/: .gitignore
starter_code/src/comp3431-rsa/save/: CMakeLists.txt  package.xml
starter_code/src/comp3431-rsa/save/src/: node_save.cpp  saving_node.cpp
(+130 files in other folders)
